--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="location">Location</string>
     <string name="destination">Destination</string>
     <string name="calculate_route">Calculate Route</string>
-    calculate_route
+    <string name="helloworld">Hello World</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
